projects/vb6parse/snapshots/syntax/statements/declarations/variables/private_variable_currency.snap
---
source: projects/vb6parse/src/syntax/statements/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_price
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: CurrencyKeyword
          text: Currency
        - kind: Newline
          text: "\n"
